--- a/cloth-larder/package.json
+++ b/cloth-larder/package.json
@@ -10,8 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^11.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router": "^7.0.2",
     "sass": "^1.83.0"
   },
   "devDependencies": {
