--- a/cloth-larder/package.json
+++ b/cloth-larder/package.json
@@ -14,7 +14,8 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router": "^7.0.2",
-    "sass": "^1.83.0"
+    "sass": "^1.83.0",
+    "vite": "^6.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -25,7 +26,6 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.13.0",
-    "vite": "^6.0.5"
+    "globals": "^15.13.0"
   }
 }
